--- a/KBCV1.ipynb
+++ b/KBCV1.ipynb
@@ -6,7 +6,7 @@
       "name": "KBCV1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOhD45WQ4/NWQZ/5asuohSe",
+      "authorship_tag": "ABX9TyMnBjMPGZCf7c7rg7GC3P1o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,6 +225,112 @@
           "name": "stdout",
           "text": [
             "Selamat Anda Lulus\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# mendefinisikan fungsi menggunakan 'def'\n",
+        "def ini_fungsi(siapaNamanya):\n",
+        "  print(siapaNamanya + \" belajar Bahasa Ular\")\n",
+        "\n",
+        "\n",
+        "# memanggil fungsi\n",
+        "ini_fungsi('Harry Potter')\n",
+        "\n",
+        "# memanggil kembali fungsi dengan nilai parameter berbeda\n",
+        "ini_fungsi('Voldemort')\n",
+        "\n",
+        "# lagi\n",
+        "ini_fungsi('Semua orang')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "npgUEOYWyYjq",
+        "outputId": "31509b66-4b3f-46a8-dd9d-c3dd2c2c4f18"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Harry Potter belajar Bahasa Ular\n",
+            "Voldemort belajar Bahasa Ular\n",
+            "Semua orang belajar Bahasa Ular\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# memanggil modul 'datetime' untuk menampilkan waktu\n",
+        "# fungsi datetime dinamakan sebagai 'dt' untuk menyingkat pemanggilan\n",
+        "import datetime as dt\n",
+        "\n",
+        "# memanggil fungsi datetime.now pada modul datetime\n",
+        "x = dt.datetime.now()\n",
+        "print(x)\n",
+        "\n",
+        "\n",
+        "# memanggil hanya fungsi tertentu pada satu modul\n",
+        "from datetime import date\n",
+        "\n",
+        "hariIni = date.today()\n",
+        "\n",
+        "print(\"Hari ini tanggal: \", hariIni)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UEMFdmLfygf-",
+        "outputId": "cbd2cbb7-3ccf-4a4e-cde2-d9d457a19030"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2022-03-11 02:24:00.823842\n",
+            "Hari ini tanggal:  2022-03-11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# memanggil modul numpy\n",
+        "\n",
+        "import numpy as np\n",
+        "a  = np.array([1,2,3])\n",
+        "\n",
+        "# mencetak dimensi dan tipe data matriks a\n",
+        "print(a.shape)\n",
+        "print(a.dtype)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SBhA65HBymhO",
+        "outputId": "691152f0-65ad-4e70-ac1a-1cbc5d28ce2c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3,)\n",
+            "int64\n"
           ]
         }
       ]
